tests/snapshots/snapshots__whale-words-only.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
 ◆ Needs you


---
r0 c0..1 bg=Background
r0 c1..2 fg=Attention bg=Background
r0 c2..3 bg=Background
r0 c3..12 fg=Foreground bg=Background
r0 c12..14 bg=Background
r1 c0..14 bg=Background
r2 c0..14 bg=Background

== dark-graphite
 ◆ Needs you


---
r0 c0..1 bg=Background
r0 c1..2 fg=Attention bg=Background
r0 c2..3 bg=Background
r0 c3..12 fg=Foreground bg=Background
r0 c12..14 bg=Background
r1 c0..14 bg=Background
r2 c0..14 bg=Background

== light-truecolor
 ◆ Needs you


---
r0 c0..1 bg=Background
r0 c1..2 fg=Attention bg=Background
r0 c2..3 bg=Background
r0 c3..12 fg=Foreground bg=Background
r0 c12..14 bg=Background
r1 c0..14 bg=Background
r2 c0..14 bg=Background

== dark-256
 ◆ Needs you


---
r0 c0..1 bg=Background
r0 c1..2 fg=Attention bg=Background
r0 c2..3 bg=Background
r0 c3..12 fg=Foreground bg=Background
r0 c12..14 bg=Background
r1 c0..14 bg=Background
r2 c0..14 bg=Background

== light-256
 ◆ Needs you


---
r0 c0..1 bg=Background|Surface
r0 c1..2 fg=Attention bg=Background|Surface
r0 c2..3 bg=Background|Surface
r0 c3..12 fg=Foreground bg=Background|Surface
r0 c12..14 bg=Background|Surface
r1 c0..14 bg=Background|Surface
r2 c0..14 bg=Background|Surface

== ansi-16
 ◆ Needs you


---
r0 c1..2 fg=Attention

== unknown-ground
 ◆ Needs you


---
r0 c1..2 fg=Attention

== no-color
 ◆ Needs you


---

== ascii
 * Needs you


---
